tests/script_runtime_errors/subslice_and_idx_out_of_bounds/error.txt
Error: 
    1 | event[1:3][2]
      |            ^ Array index out of bounds, got index 2 but expected an index in the range 0:2